kubernetes/home/forgejo/app/resources/Service--home-forgejo--forgejo-ssh-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh-tailscale
  namespace: home-forgejo
  labels:
    tailscale.com/proxy-class: tailscale-proxy-resources
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: forgejo-ssh
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/name: forgejo
  ports:
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: ssh
